globus-xio-gsi-driver (3.8-2+gt6.@distro@) @distro@; urgency=low

  * Rename binary package from libglobus-xio-gsi-driver0 to
    libglobus-xio-gsi-driver since it is an unversioned shared object

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 08:40:01 -0500

globus-xio-gsi-driver (3.8-1+gt6.@distro@) @distro@; urgency=low

  * GT-615: GSI XIO driver uses resolved IP address when importing names

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 13:26:11 -0400

globus-xio-gsi-driver (3.7-1+gt6.@distro@) @distro@; urgency=low

  * Handle anonymous targets in GSI RFC2818 mode and document stringopts

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 07:38:09 -0400

globus-xio-gsi-driver (3.6-1+gt6.@distro@) @distro@; urgency=low

  * Doxygen markup fixes
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 14:28:23 -0400

globus-xio-gsi-driver (3.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-xio-gsi-driver (3.4-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-xio-gsi-driver (3.4-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-xio-gsi-driver (3.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:40 -0400

globus-xio-gsi-driver (3.3-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:29 -0400

globus-xio-gsi-driver (3.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:55 -0400
