@@ -1,6 +1,6 @@
 Name: globus-xio-pipe-driver
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_xio_pipe_driver-3.7.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_xio_pipe_driver-3.8.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
