@@ -1,3 +1,9 @@
+globus-xio-pipe-driver (3.8-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add dlpreopen variable to uninstalled pc file
+
+ -- Globus Toolkit <support@globus.org>  Tue, 05 Apr 2016 16:44:10 -0400
+
 globus-xio-pipe-driver (3.7-2+gt6.@distro@) @distro@; urgency=low
 
   * Rename binary package from libglobus-xio-pipe-driver0 to 
