@@ -1,3 +1,9 @@
+globus-xio-gsi-driver (3.9-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add dlpreopen variable to uninstalled pc file
+
+ -- Globus Toolkit <support@globus.org>  Tue, 05 Apr 2016 16:41:02 -0400
+
 globus-xio-gsi-driver (3.8-2+gt6.@distro@) @distro@; urgency=low
 
   * Rename binary package from libglobus-xio-gsi-driver0 to
